--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Unique IT-Care</title>
+	<title>Reazul Islam Reaz</title>
 	<link rel="icon" href="img/favicon.png" type="image/png" />
 	<link rel="stylesheet" href="bjqs.css">
 	<link rel="stylesheet" href="style.css" />
@@ -28,7 +28,7 @@
 		<div class="wrap">
 			<header> 
 				<div id="header"> 
-				<h2>Unique IT-Care</h2>
+				<h2>Reazul Islam Reaz</h2>
 				<p>Professional Web Designer</p>
 				</div>
 	
