--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 			 <div class="wrap">
 			    <footer> 
 					<div id="footer"> 
-						<p> &copy; All Rights Reserved By Unique IT-Care.com</p>
+						<p> &copy; All Rights Reserved By Reazul Islam Reaz</p>
 					
 					</div>
 				
